--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -221,6 +221,10 @@
     <string name="fingerprint_setup_successfully">Protection setup successfully. Please reinstall the app in case of problems with reseting it.</string>
 
     <!-- Times -->
+    <string name="minutes_raw">分</string>
+    <string name="hours_raw">時間</string>
+    <string name="days_raw">日</string>
+
     <plurals name="seconds">
         <item quantity="one">%d秒</item>
         <item quantity="other">%d秒</item>
