--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -160,7 +160,7 @@
     <string name="solarized">Solarized</string>
     <string name="dark_red">Dark red</string>
     <string name="black_white">Black &amp; White</string>
-    <string name="custom">Custom</string>
+    <string name="custom">사용자 정의</string>
     <string name="shared">Shared</string>
 
     <!-- What's new -->
@@ -221,6 +221,10 @@
     <string name="fingerprint_setup_successfully">보안 설정이 성공적으로 완료되었습니다. 재설정 시 문제가 발생하면 앱을 다시 설치하시기 바랍니다.</string>
 
     <!-- Times -->
+    <string name="minutes_raw">분</string>
+    <string name="hours_raw">시간</string>
+    <string name="days_raw">일</string>
+
     <plurals name="seconds">
         <item quantity="one">%d second</item>
         <item quantity="other">%d seconds</item>
