--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -220,6 +220,10 @@
     <string name="fingerprint_setup_successfully">保護設置成功。若再次設置時發生問題，請重新安裝應用程式。</string>
 
     <!-- Times -->
+    <string name="minutes_raw">分鐘</string>
+    <string name="hours_raw">小時</string>
+    <string name="days_raw">天</string>
+
     <plurals name="seconds">
         <item quantity="one">%d秒鐘</item>
         <item quantity="other">%d秒鐘</item>
