--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -275,6 +275,23 @@
         <item quantity="other">%d hours</item>
     </plurals>
 
+    <!-- For example: Event reminder: 3 minutes before -->
+    <plurals name="minutes_before">
+        <item quantity="one">%d minutę przed</item>
+        <item quantity="few">%d minuty przed</item>
+        <item quantity="other">%d minut before</item>
+    </plurals>
+    <plurals name="hours_before">
+        <item quantity="one">%d godzinę przed</item>
+        <item quantity="few">%d godziny przed</item>
+        <item quantity="other">%d godzin przed</item>
+    </plurals>
+    <plurals name="days_before">
+        <item quantity="one">%d dzień przed</item>
+        <item quantity="few">%d dni przed</item>
+        <item quantity="other">%d dni przed</item>
+    </plurals>
+
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
     <string name="alarm_goes_off_in">Time remaining till the alarm goes off:\n%s</string>
     <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
@@ -283,6 +300,8 @@
     <!-- Alarms -->
     <string name="snooze">Drzemka</string>
     <string name="dismiss">Dismiss</string>
+    <string name="no_reminder">Brak przypomnienia</string>
+    <string name="at_start">Przy rozpoczęciu</string>
 
     <!-- Settings -->
     <string name="settings">Ustawienia</string>
