--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -279,6 +279,23 @@
         <item quantity="other">%d hodín</item>
     </plurals>
 
+    <!-- For example: Event reminder: 3 minutes before -->
+    <plurals name="minutes_before">
+        <item quantity="one">%d minútu vopred</item>
+        <item quantity="few">%d minúty vopred</item>
+        <item quantity="other">%d minút vopred</item>
+    </plurals>
+    <plurals name="hours_before">
+        <item quantity="one">%d hodinu vopred</item>
+        <item quantity="few">%d hodiny vopred</item>
+        <item quantity="other">%d hodín vopred</item>
+    </plurals>
+    <plurals name="days_before">
+        <item quantity="one">%d deň vopred</item>
+        <item quantity="few">%d dni vopred</item>
+        <item quantity="other">%d dní vopred</item>
+    </plurals>
+
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
     <string name="alarm_goes_off_in">Zostávajúci čas do zvonenia budíka:\n%s</string>
     <string name="alarm_warning">Pred tým, ako by ste sa na budík spoliehali, sa prosím uistite, že funguje správne. Niektoré systémové obmedzenia spojené so zlepšením výdrže batérie môžu spôsobiť problémy.</string>
@@ -287,6 +304,8 @@
     <!-- Alarms -->
     <string name="snooze">Odložiť</string>
     <string name="dismiss">Odstrániť</string>
+    <string name="no_reminder">Žiadna pripomienka</string>
+    <string name="at_start">Na začiatku</string>
 
     <!-- Settings -->
     <string name="settings">Nastavenia</string>
