--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -268,6 +268,20 @@
         <item quantity="other">%d hours</item>
     </plurals>
 
+    <!-- For example: Event reminder: 3 minutes before -->
+    <plurals name="minutes_before">
+        <item quantity="one">%d 분 전</item>
+        <item quantity="other">%d 분 전</item>
+    </plurals>
+    <plurals name="hours_before">
+        <item quantity="one">%d 시간 전</item>
+        <item quantity="other">%d 시간 전</item>
+    </plurals>
+    <plurals name="days_before">
+        <item quantity="one">%d 일 전</item>
+        <item quantity="other">%d 일 전</item>
+    </plurals>
+
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
     <string name="alarm_goes_off_in">Time remaining till the alarm goes off:\n%s</string>
     <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
@@ -276,6 +290,8 @@
     <!-- Alarms -->
     <string name="snooze">스누즈</string>
     <string name="dismiss">Dismiss</string>
+    <string name="no_reminder">알림 없음</string>
+    <string name="at_start">시작할 때</string>
 
     <!-- Settings -->
     <string name="settings">설정</string>
