--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -268,6 +268,20 @@
         <item quantity="other">%d uren</item>
     </plurals>
 
+    <!-- For example: Event reminder: 3 minutes before -->
+    <plurals name="minutes_before">
+        <item quantity="one">%d minuut van tevoren</item>
+        <item quantity="other">%d minuten van tevoren</item>
+    </plurals>
+    <plurals name="hours_before">
+        <item quantity="one">%d uur van tevoren</item>
+        <item quantity="other">%d uren van tevoren</item>
+    </plurals>
+    <plurals name="days_before">
+        <item quantity="one">%d dag van tevoren</item>
+        <item quantity="other">%d dagen van tevoren</item>
+    </plurals>
+
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
     <string name="alarm_goes_off_in">Time remaining till the alarm goes off:\n%s</string>
     <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
@@ -276,6 +290,8 @@
     <!-- Alarms -->
     <string name="snooze">Uitstellen</string>
     <string name="dismiss">Dismiss</string>
+    <string name="no_reminder">Geen herinnering</string>
+    <string name="at_start">Als afspraak begint</string>
 
     <!-- Settings -->
     <string name="settings">Instellingen</string>
