--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -280,6 +280,26 @@
         <item quantity="other">%d hours</item>
     </plurals>
 
+    <!-- For example: Event reminder: 3 minutes before -->
+    <plurals name="minutes_before">
+        <item quantity="one">%d минута до события</item>
+        <item quantity="few">%d минуты до события</item>
+        <item quantity="many">%d минут до события</item>
+        <item quantity="other">%d минут(-ы) до события</item>
+    </plurals>
+    <plurals name="hours_before">
+        <item quantity="one">%d час до события</item>
+        <item quantity="few">%d часа до события</item>
+        <item quantity="many">%d часов до события</item>
+        <item quantity="other">%d часа(-ов) до события</item>
+    </plurals>
+    <plurals name="days_before">
+        <item quantity="one">%d день до события</item>
+        <item quantity="few">%d дня до события</item>
+        <item quantity="many">%d дней до события</item>
+        <item quantity="other">%d дня(-ей) до события</item>
+    </plurals>
+
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
     <string name="alarm_goes_off_in">Time remaining till the alarm goes off:\n%s</string>
     <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
@@ -288,6 +308,8 @@
     <!-- Alarms -->
     <string name="snooze">Отложить</string>
     <string name="dismiss">Dismiss</string>
+    <string name="no_reminder">Без напоминания</string>
+    <string name="at_start">С наступлением события</string>
 
     <!-- Settings -->
     <string name="settings">Настройки</string>
