add a new string about button vibrations

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -327,6 +327,7 @@
     <string name="widgets">Ginys</string>
     <string name="use_same_snooze">Utilitzeu sempre el mateix temps de posposat</string>
     <string name="snooze_time">Temps de posposat</string>
+    <string name="vibrate_on_button_press">Vibrate on button press</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilitat</string>
