--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -326,6 +326,7 @@
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Immer dasselbe Snooze-Intervall nutzen</string>
     <string name="snooze_time">Snooze-Intervall</string>
+    <string name="vibrate_on_button_press">Bei Tastendruck vibrieren</string>
 
     <!-- Setting sections -->
     <string name="visibility">Sichtbarkeit</string>
