--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -338,6 +338,7 @@
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Zawsze używaj tego samego przedziału przypomnienia</string>
     <string name="snooze_time">Snooze time</string>
+    <string name="vibrate_on_button_press">Wibracja po wciśnięciu przycisku</string>
 
     <!-- Setting sections -->
     <string name="visibility">Widoczność</string>
