--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -326,6 +326,7 @@
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Usar sempre o mesmo intervalo para snooze</string>
     <string name="snooze_time">Snooze time</string>
+    <string name="vibrate_on_button_press">Vibrar ao tocar nos botões</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilidade</string>
