--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -346,6 +346,7 @@
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Всегда использовать один и тот же интервал повтора</string>
     <string name="snooze_time">Snooze time</string>
+    <string name="vibrate_on_button_press">Вибрация при нажатии кнопок</string>
 
     <!-- Setting sections -->
     <string name="visibility">Отображение</string>
