--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -342,6 +342,7 @@
     <string name="widgets">Widgety</string>
     <string name="use_same_snooze">Použiť stále rovnaký čas s Odložiť</string>
     <string name="snooze_time">Čas odloženia</string>
+    <string name="vibrate_on_button_press">Vibrovať pri stlačení tlačidiel</string>
 
     <!-- Setting sections -->
     <string name="visibility">Viditeľnosť</string>
