--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -326,6 +326,7 @@
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Använd alltid samma snooze-intervall</string>
     <string name="snooze_time">Snooze-intervall</string>
+    <string name="vibrate_on_button_press">Vibrera när jag trycker på knapparna</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighet</string>
