--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -326,6 +326,7 @@
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Brug altid samme snooze-tid</string>
     <string name="snooze_time">Snooze-tid</string>
+    <string name="vibrate_on_button_press">Vibrate on button press</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighed</string>
